<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tcpLayersLearning">

    <Button
        android:id="@+id/application_layer"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:text="@string/application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="307dp" />

    <Button
        android:id="@+id/transport_layer"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:text="@string/transport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/network_layer"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:text="@string/network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="391dp" />

    <Button
        android:id="@+id/data_layer"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:text="@string/data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="433dp" />

    <Button
        android:id="@+id/physical_layer"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:text="@string/physical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="475dp" />

</androidx.constraintlayout.widget.ConstraintLayout>