<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ARQExercise">

    <TextView
        android:id="@+id/arqTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/exercise"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arqQues1"
        android:layout_width="294dp"
        android:layout_height="111dp"
        android:layout_marginTop="48dp"
        android:text="@string/arqQuestion1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arqTitle" />

    <TextView
        android:id="@+id/arqQues2"
        android:layout_width="295dp"
        android:layout_height="105dp"
        android:layout_marginTop="48dp"
        android:text="@string/arqQuestion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arqQues1" />

    <TextView
        android:id="@+id/arqQues3"
        android:layout_width="279dp"
        android:layout_height="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/arqQuestion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arqQues2" />

    <Button
        android:id="@+id/arqSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="62dp"
        android:text="@string/solution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arqQues3" />
</androidx.constraintlayout.widget.ConstraintLayout>