<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModelLayerActivity">

    <TextView
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/model_layer_topic"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/arqs_learning"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_white_darkorange_button"
        android:text="@string/learning"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/arqs_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/arqs_exercise"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_white_darkorange_button"
        android:text="@string/exercise"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/arqs_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/arqs_quiz"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_white_darkorange_button"
        android:text="@string/quiz"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/arqs_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/arqs_score"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/rounded_white_darkorange_button"
        android:text="@string/score"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>